--- a/system/templates/actor/parts/tabs/bio.html
+++ b/system/templates/actor/parts/tabs/bio.html
@@ -1,3 +1,3 @@
-<div class="fatex__bio">
-
+<div class="fatex__biography">
+    {{editor content=data.biography.value target="data.biography.value" button=true owner=owner editable=editable}}
 </div>
