--- a/system/templates/actor/parts/tabs/bio.hbs
+++ b/system/templates/actor/parts/tabs/bio.hbs
@@ -1,3 +1,3 @@
-<div class="fatex__biography">
+<div class="fatex-biography">
     {{editor content=data.biography.value target="data.biography.value" button=true owner=owner editable=editable}}
 </div>
