--- a/system/templates/actor/tabs/bio.hbs
+++ b/system/templates/actor/tabs/bio.hbs
@@ -1,1 +1,1 @@
-{{editor content=data.biography.value target="data.biography.value" button=true owner=owner editable=editable}}
+{{editor content=data.biography.value target="system.biography.value" button=true owner=owner editable=editable}}
